--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Eigo Fujikawa",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@mapbox/mapbox-gl-geocoder": "4.7.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
@@ -12,10 +13,10 @@
     "@types/react-helmet": "^6.1.0",
     "@types/recharts": "1.8.9",
     "babel-preset-gatsby": "1.1.0",
-    "@fortawesome/fontawesome-free":"^5.15.3",
     "bootstrap": "^4.6.0",
     "electron": "11.2.3",
     "gatsby": "3.1.1",
+    "gatsby-plugin-google-gtag": "^4.7.0",
     "gatsby-plugin-image": "1.1.1",
     "gatsby-plugin-manifest": "3.1.0",
     "gatsby-plugin-mdx": "2.1.0",
