--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-qr-code": "^1.1.1",
     "recharts": "^2.0.4",
     "tsc": "^1.20150623.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "postcss": "8.4.12"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.19.0",
