--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "electron": "11.2.3",
     "gatsby": "4.10.3",
     "gatsby-plugin-google-gtag": "^4.7.0",
-    "gatsby-plugin-image": "1.1.1",
+    "gatsby-plugin-image": "2.10.1",
     "gatsby-plugin-manifest": "4.10.2",
     "gatsby-plugin-mdx": "2.1.0",
     "gatsby-plugin-offline": "4.1.0",
-    "gatsby-plugin-react-helmet": "4.1.0",
+    "gatsby-plugin-react-helmet": "5.10.0",
     "gatsby-plugin-sharp": "4.10.2",
     "gatsby-plugin-typescript": "4.10.1",
     "gatsby-source-filesystem": "4.10.1",
     "gatsby-transformer-csv": "4.10.0",
     "gatsby-transformer-sharp": "4.10.0",
+    "gatsby-plugin-netlify":"4.1.0",
     "geojson": "0.5.0",
     "graphql-request": "3.4.0",
     "holderjs": "^2.9.9",
