--- a/.github/workflows/validate-data.yml
+++ b/.github/workflows/validate-data.yml
@@ -12,5 +12,5 @@ jobs:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
       - name: Validate latest fx-transactions kessaidata
-        run: find src/data/fx_transactions/ -name '*.csv' | xargs -ITARGET python scripts/validate-fx-buysell-order.py TARGET
+        run: find src/data/fx_transactions/ -name '*.csv' | sort | xargs -ITARGET python scripts/validate-fx-buysell-order.py TARGET
         working-directory: ./
