--- a/.github/workflows/sbi-csv-police.yml
+++ b/.github/workflows/sbi-csv-police.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-      - name: find and transform original SBI csv file 
+      - name: Transform original SBI csv file 
         run: |
           # export csv destination path
           export PROCESSED_CSV_DEST_PATH=$(pwd)/src/data/fx_transactions/
