--- a/package.json
+++ b/package.json
@@ -1,24 +1,65 @@
 {
-  "name": "nextjs",
+  "name": "fx-report",
+  "description": "A simple web application for graphical reporting your fx trading history.",
   "version": "0.1.0",
+  "author": "Eigo Fujikawa",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"", 
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"  
   },
   "dependencies": {
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-helmet": "^6.1.0",
+    "react-bootstrap": "^1.4.3",
+    "prop-types": "^15.7.2",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "recharts": "^2.0.4",
+    "holderjs": "^2.9.9",
+    "lodash": "4.17.20",
+    "moment": "2.29.1",
+    "bootstrap": "^4.6.0",
+    "electron": "11.2.3",
+    "postcss": "8.4.12",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "graphql-request": "3.4.0",
+    "@mapbox/mapbox-gl-geocoder": "4.7.0",
+    "geojson": "0.5.0",
+    "@turf/bbox": "^6.0.1",
+    "mapbox-gl": "1.13.1",
+    "react-map-gl": "5.3.8",
+    "react-qr-code": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@types/react-helmet": "^6.1.0",
+    "@types/recharts": "1.8.9",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
-    "typescript": "4.6.3"
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "tsc": "^1.20150623.0",
+    "typescript": "4.6.3",
+    "prettier": "2.6.1"
+  },
+  "repository": { 
+    "type": "git", 
+    "url": "https://github.com/Eigo-Mt-Fuji/fx-report" 
+  }, 
+  "bugs": { 
+    "url": "https://github.com/Eigo-Mt-Fuji/fx-report/issues" 
+  },
+  "engines": {
+    "node": ">=15"
   }
 }
