--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "prop-types": "^15.7.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "12.1.4",
+    "@mdx-js/loader":"2.1.1",
     "recharts": "^2.0.4",
     "holderjs": "^2.9.9",
     "lodash": "4.17.20",
