--- a/package.json
+++ b/package.json
@@ -48,12 +48,13 @@
     "@types/react-helmet": "^6.1.0",
     "@types/recharts": "1.8.9",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/typescript-estree":"5.17.0",
     "@typescript-eslint/parser": "^4.19.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "prettier": "2.6.1",
     "tsc": "^1.20150623.0",
-    "typescript": "4.6.3"
+    "typescript": "4.5.5"
   },
   "repository": {
     "type": "git",
