--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=G-7R5L9YLCGD
+NEXT_PUBLIC_GRAPHCMS_ENDPOINT=https://api-ap-northeast-1.graphcms.com/v2/cklhys4joxeqr01z65dl76xf6/master
