--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@mapbox/mapbox-gl-geocoder": "4.7.0",
-    "@mdx-js/loader": "2.1.1",
+    "@mdx-js/loader": "next",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "12.1.4",
@@ -41,6 +41,7 @@
     "recharts": "^2.0.4"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.2.5",
     "@types/gtag.js": "^0.0.10",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
@@ -48,14 +49,14 @@
     "@types/react-helmet": "^6.1.0",
     "@types/recharts": "1.8.9",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/typescript-estree":"5.17.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "@typescript-eslint/typescript-estree": "5.17.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "prettier": "2.6.1",
+    "remark-gfm": "^3.0.1",
     "tsc": "^1.20150623.0",
-    "typescript": "4.5.5",
-    "@netlify/plugin-nextjs": "^4.2.5"
+    "typescript": "4.5.5"
   },
   "repository": {
     "type": "git",
