--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-    "presets": [
-      // https://www.npmjs.com/package/babel-preset-gatsby
-      "babel-preset-gatsby"
-    ]
+  "presets": ["next/babel"],
+  "plugins": []
 }
