--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@turf/bbox": "^6.0.1",
     "bootstrap": "^4.6.0",
     "electron": "11.2.3",
+    "fs": "^0.0.1-security",
     "geojson": "0.5.0",
     "graphql-request": "3.4.0",
     "holderjs": "^2.9.9",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.2.5",
     "@types/gtag.js": "^0.0.10",
+    "@types/holderjs": "^2.9.2",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
