--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@mapbox/mapbox-gl-geocoder": "4.7.0",
-    "@mdx-js/loader": "next",
-    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/loader": "2.1.1",
+    "@mdx-js/mdx": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "12.1.4",
     "@turf/bbox": "^6.0.1",
     "bootstrap": "^4.6.0",
     "electron": "11.2.3",
-    "fs": "^0.0.1-security",
+    "fs": "^0.0.2",
     "geojson": "0.5.0",
+    "graphql": "^16.2.2",
     "graphql-request": "3.4.0",
     "holderjs": "^2.9.9",
     "lodash": "4.17.20",
@@ -53,9 +54,12 @@
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^4.19.0",
     "@typescript-eslint/typescript-estree": "5.17.0",
+    "encoding": "^0.1.13",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "null-loader": "^4.0.1",
     "prettier": "2.6.1",
+    "readline": "^1.3.0",
     "remark-gfm": "^3.0.1",
     "tsc": "^1.20150623.0",
     "typescript": "4.5.5"
