--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "18.0.0",
     "react-helmet": "^6.1.0",
+    "react-holder": "^1.0.0",
     "react-map-gl": "5.3.8",
     "react-qr-code": "^1.1.1",
     "recharts": "^2.0.4"
@@ -50,6 +51,7 @@
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-holder": "^1.0.34",
     "@types/recharts": "1.8.9",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^4.19.0",
@@ -60,7 +62,6 @@
     "null-loader": "^4.0.1",
     "prettier": "2.6.1",
     "readline": "^1.3.0",
-    "remark-gfm": "^3.0.1",
     "tsc": "^1.20150623.0",
     "typescript": "4.5.5"
   },
