--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "next": "12.1.4",
     "postcss": "8.4.12",
     "prop-types": "^15.7.2",
+    "ra-data-json-server": "^3.19.10",
     "react": "18.0.0",
+    "react-admin": "^3.19.10",
     "react-bootstrap": "^1.4.3",
     "react-dom": "18.0.0",
     "react-helmet": "^6.1.0",
