--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=G-7R5L9YLCGD
 NEXT_PUBLIC_GRAPHCMS_ENDPOINT=https://api-ap-northeast-1.graphcms.com/v2/cklhys4joxeqr01z65dl76xf6/master
+NEXT_PUBLIC_FX_ANALYSIS_BACKEND_API_ENDPOINT=http://localhost:9000
