--- a/package.json
+++ b/package.json
@@ -80,7 +80,9 @@
     "prettier": "2.6.1",
     "readline": "^1.3.0",
     "tsc": "^1.20150623.0",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2"
   },
   "repository": {
     "type": "git",
