--- a/.github/workflows/sbi-csv-s3-deploy.yml
+++ b/.github/workflows/sbi-csv-s3-deploy.yml
@@ -22,7 +22,8 @@ jobs:
           echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
 
           curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=sigstore" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE
-
+      - name: dump
+        run: cat $AWS_WEB_IDENTITY_TOKEN_FILE
       - name: AWS STS  Get Caller Identity
         run: aws sts get-caller-identity
 
