--- a/.github/workflows/sbi-csv-s3-deploy.yml
+++ b/.github/workflows/sbi-csv-s3-deploy.yml
@@ -21,7 +21,9 @@ jobs:
           echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
           echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
 
-          curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=sigstore" | jq -r '.value' > $AWS_WEB_IDENTITY_TOKEN_FILE
+          export ID_TOKEN=$(curl -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=sigstore" | jq -r '.value')
+          echo $ID_TOKEN
+          echo $ID_TOKEN > $AWS_WEB_IDENTITY_TOKEN_FILE
       - name: dump
         run: cat $AWS_WEB_IDENTITY_TOKEN_FILE
       - name: AWS STS  Get Caller Identity
