--- a/.github/workflows/sbi-csv-s3-deploy.yml
+++ b/.github/workflows/sbi-csv-s3-deploy.yml
@@ -9,8 +9,9 @@ jobs:
       id-token: write
       contents: read
     steps:
+      - uses: actions/checkout@v2
       - run: sleep 5 # there's still a race condition for now
-      # 
+
       # https://github.blog/changelog/2022-01-13-github-actions-update-on-oidc-based-deployments-to-aws/
       # https://docs.github.com/en/actions/deployment/security-hardening-your-deployments/about-security-hardening-with-openid-connect
       - name: Configure AWS
