--- a/.github/workflows/sbi-csv-s3-deploy.yml
+++ b/.github/workflows/sbi-csv-s3-deploy.yml
@@ -1,7 +1,6 @@
 name: Upload SBI csv to AWS S3
 on:
   push:
-  pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -10,23 +9,12 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v2
-      - run: sleep 5 # there's still a race condition for now
-
       # https://github.blog/changelog/2022-01-13-github-actions-update-on-oidc-based-deployments-to-aws/
       # https://docs.github.com/en/actions/deployment/security-hardening-your-deployments/about-security-hardening-with-openid-connect
-      - name: Configure AWS
-        run: |
-          export AWS_ROLE_ARN=arn:aws:iam::047980477351:role/prdFxReportGithubWorkflow
-          export AWS_WEB_IDENTITY_TOKEN_FILE=/tmp/awscreds
-          export AWS_DEFAULT_REGION=us-east-1
-
-          echo AWS_WEB_IDENTITY_TOKEN_FILE=$AWS_WEB_IDENTITY_TOKEN_FILE >> $GITHUB_ENV
-          echo AWS_ROLE_ARN=$AWS_ROLE_ARN >> $GITHUB_ENV
-          echo AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION >> $GITHUB_ENV
-
-          export ID_TOKEN=$(curl -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=sigstore" | jq -r '.value')
-          echo $ID_TOKEN
-          echo $ID_TOKEN > $AWS_WEB_IDENTITY_TOKEN_FILE
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: arn:aws:iam::047980477351:role/prdFxReportGithubWorkflow
+          aws-region: ap-northeast-1
       # https://docs.aws.amazon.com/cli/latest/reference/sts/get-caller-identity.html
       - name: AWS STS  Get Caller Identity
         run: aws sts get-caller-identity
