--- a/package.json
+++ b/package.json
@@ -14,42 +14,42 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@mapbox/mapbox-gl-geocoder": "4.7.0",
     "@mdx-js/loader": "2.1.1",
     "@mdx-js/mdx": "^2.0.1",
     "@mdx-js/react": "^1.6.22",
+    "@mui/icons-material": "^5.6.0",
+    "@mui/material": "^5.6.0",
     "@next/mdx": "12.1.4",
     "@turf/bbox": "^6.0.1",
     "bootstrap": "^4.6.0",
     "electron": "11.2.3",
+    "fakerest": "^3.0.0",
+    "fetch-mock": "~6.3.0",
     "fs": "^0.0.2",
     "geojson": "0.5.0",
     "graphql": "^16.2.2",
     "graphql-request": "3.4.0",
     "holderjs": "^2.9.9",
+    "json-graphql-server": "~2.3.0",
     "lodash": "4.17.20",
     "mapbox-gl": "1.13.1",
     "moment": "2.29.1",
     "next": "12.1.4",
     "postcss": "8.4.12",
     "prop-types": "^15.7.2",
-    "ra-data-json-server": "^3.19.10",
+    "proxy-polyfill": "^0.3.0",
     "ra-data-fakerest": "^3.9.0",
     "ra-data-graphql-simple": "^3.9.0",
+    "ra-data-json-server": "^3.19.10",
     "ra-data-simple-rest": "^3.9.0",
     "ra-i18n-polyglot": "^3.9.0",
     "ra-input-rich-text": "^3.9.0",
     "ra-language-english": "^3.9.0",
     "ra-language-french": "^3.9.0",
-    "fakerest": "^3.0.0",
-    "fetch-mock": "~6.3.0",
-    "json-graphql-server": "~2.3.0",
-    "proxy-polyfill": "^0.3.0",
-    "react-redux": "^7.1.0",
-    "react-router": "^5.1.0",
-    "react-router-dom": "^5.1.0",
-    "redux-saga": "^1.0.0",
     "react": "18.0.0",
     "react-admin": "^3.19.10",
     "react-bootstrap": "^1.4.3",
@@ -58,7 +58,12 @@
     "react-holder": "^1.0.0",
     "react-map-gl": "5.3.8",
     "react-qr-code": "^1.1.1",
-    "recharts": "^2.0.4"
+    "react-redux": "^7.1.0",
+    "react-router": "^5.1.0",
+    "react-router-dom": "^5.1.0",
+    "react-virtualized": "^9.22.3",
+    "recharts": "^2.0.4",
+    "redux-saga": "^1.0.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.2.5",
@@ -69,7 +74,8 @@
     "@types/react-dom": "17.0.14",
     "@types/react-helmet": "^6.1.0",
     "@types/react-holder": "^1.0.34",
-    "@types/react-router-dom":"^5.1.0",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/react-virtualized": "^9.21.21",
     "@types/recharts": "1.8.9",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^4.19.0",
@@ -81,9 +87,7 @@
     "prettier": "2.6.1",
     "readline": "^1.3.0",
     "tsc": "^1.20150623.0",
-    "typescript": "4.5.5",
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2"
+    "typescript": "4.5.5"
   },
   "repository": {
     "type": "git",
@@ -93,6 +97,6 @@
     "url": "https://github.com/Eigo-Mt-Fuji/fx-report/issues"
   },
   "engines": {
-    "node": ">=15"
+    "node": ">=14"
   }
 }
