--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
+    "@mui/styles":"^5.6.0",
     "@next/mdx": "12.1.4",
     "@turf/bbox": "^6.0.1",
     "bootstrap": "^4.6.0",
