--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "start:dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
+    "@emotion/css": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@mapbox/mapbox-gl-geocoder": "4.7.0",
