--- a/serverless.yml
+++ b/serverless.yml
@@ -1,45 +1,24 @@
-
-# https://www.serverless.com/framework/docs/getting-started
-service: fx-report
-variablesResolutionMode: 20210326
-configValidationMode: error
-useDotenv: true
-provider:
-  name: aws
-  runtime: nodejs14.x
-  region: ap-northeast-1
-  lambdaHashingVersion: 20201221
-  memorySize: 512
-  timeout: 15
-  stackName: ${sls:stage}-fx-report
-  iam:
-    role:
-      statements:
-        - Effect: Allow
-          Action:
-            - "s3:*"
-          Resource:
-            - 'arn:aws:s3:::${emv:NEXT_PUBLIC_DATA_S3_BUCKET}'
-            - 'arn:aws:s3:::${emv:NEXT_PUBLIC_DATA_S3_BUCKET}/*'
 # whatis serverless framework component: https://github.com/serverless/components
+# whatis @sls-next/serverless-component: https://github.com/serverless-nextjs/serverless-next.js
+org: efgriver
+app: fx-report
+stage: prd
 fxReportApp:
-  # whatis @sls-next/serverless-component: https://github.com/serverless-nextjs/serverless-next.js
   component: "@sls-next/serverless-component@3.7.0"
+  name: fx-report
   inputs:
-    policy: "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole	"
+    bucketRegion: ap-northeast-1
+    policy: "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     # TODO: fix domain https://github.com/serverless-nextjs/serverless-next.js#custom-domain-name
     domain: ["welcome", "efgriver.com"] # [ sub-domain, domain ]
     domainMinimumProtocolVersion: "TLSv1.2_2021"
     certificateArn: "arn:aws:acm:us-east-1:047980477351:certificate/91defbde-5ced-4c62-b817-c4390fa4cbf7"
-    # TODO: fix nodejs runtime https://github.com/serverless-nextjs/serverless-next.js#lambda-at-edge-configuration
     runtime: "nodejs14.x"
-
-    # TODO: fix memory https://github.com/serverless-nextjs/serverless-next.js#lambda-at-edge-configuration
+    # https://github.com/serverless-nextjs/serverless-next.js#lambda-at-edge-configuration
     memory:
       defaultLambda: 1024
       apiLambda: 2048
       imageLambda: 2048
-    # TODO: fix timeout setting https://github.com/serverless-nextjs/serverless-next.js#lambda-at-edge-configuration
     #  FYI https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/lambda-requirements-limits.html
     timeout:
       defaultLambda: 20
@@ -48,3 +27,12 @@ fxReportApp:
     # https://docs.aws.amazon.com/ja_jp/AmazonS3/latest/userguide/transfer-acceleration.html
     # Transfer Acceleration で使用するバケットは、ピリオド (".") が含まれていない DNS 準拠の名前にする必要があります
     enableS3Acceleration: false
+    build:
+      env:
+        NEXT_PUBLIC_GOOGLE_ANALYTICS_ID: ${env.NEXT_PUBLIC_GOOGLE_ANALYTICS_ID}
+        NEXT_PUBLIC_GRAPHCMS_ENDPOINT: ${env.NEXT_PUBLIC_GRAPHCMS_ENDPOINT}
+        NEXT_PUBLIC_FX_ANALYSIS_BACKEND_API_ENDPOINT: ${env.NEXT_PUBLIC_FX_ANALYSIS_BACKEND_API_ENDPOINT}
+        NEXT_PUBLIC_DATA_S3_BUCKET: ${env.NEXT_PUBLIC_DATA_S3_BUCKET}
+    tags:
+      env: ${stage}
+      project: fx-report
