--- a/.github/workflows/deploy-aws-serverless.yml
+++ b/.github/workflows/deploy-aws-serverless.yml
@@ -23,11 +23,11 @@ jobs:
           role-to-assume: arn:aws:iam::047980477351:role/prdFxReportGithubWorkflow
           aws-region: ap-northeast-1
 
-      - name: install serverlss v3
-        run: npm install -g serverless@3.12.0
+      # - name: install serverlss v3
+      #   run: npm install -g serverless@3.12.0
 
-      - name: install @serverless/components v3
-        run: npm install -g @serverless/components@3.18.2
+      # - name: install @serverless/components v3
+      #   run: npm install -g @serverless/components@3.18.2
 
       - name: install packages
         run: yarn install
