improve sbi-csv-police work only pull request opened

--- a/.github/workflows/sbi-csv-police.yml
+++ b/.github/workflows/sbi-csv-police.yml
@@ -1,6 +1,10 @@
 name: SBI csv police for transform
 on:
-  push:
+  pull_request:
+    types:
+      - opened
+    branches:
+      - 'Eigo-Mt-Fuji-patch-*'
     paths:
       - 'downloads/sbi/*.csv'
 jobs:
@@ -13,6 +17,7 @@ jobs:
         with:
           python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
+
       - name: Transform original SBI csv file 
         run: |
           # export csv destination path
@@ -27,20 +32,17 @@ jobs:
       - name: Get current datetime
         id: datetime
         run: echo "::set-output name=value::$(date +'%Y-%m-%d %H:%M:%S')"
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v4
+
+      - uses: EndBug/add-and-commit@v9 # You can change this to use a specific version.
         with:
-          commit-message: Update src/data/fx_transactions ${{ steps.datetime.outputs.value }}
-          title: Update src/data/fx_transactions ${{ steps.datetime.outputs.value }}
-          body: |
-            Update src/data/fx_transactions ${{ steps.datetime.outputs.value }}
-          labels: |
-            workflow
-          committer: GitHub <noreply@github.com>
-          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
-          assignees: Eigo-Mt-Fuji
-          reviewers: Eigo-Mt-Fuji
-          team-reviewers: |
-            owners
-            maintainers
-          draft: false
+          add: 'src/data/fx_transactions/*'
+          remove: './downloads/sbi/*.csv'
+          message: Update src/data/fx_transactions ${{ steps.datetime.outputs.value }}
+          default_author: Eigo-Mt-Fuji
+          author_name: Eigo-Mt-Fuji
+          author_email: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          commit: --signoff
+          committer_name: Eigo-Mt-Fuji
+          committer_email: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          cwd:  '.'
+          push: true
