--- a/.github/workflows/sbi-csv-police.yml
+++ b/.github/workflows/sbi-csv-police.yml
@@ -1,10 +1,9 @@
 name: SBI csv police for transform
 on:
   pull_request:
-    types:
-      - opened
+    types: [opened]
     branches:
-      - Eigo-Mt-Fuji-patch-1
+      - main
     paths:
       - downloads/sbi/*.csv
 jobs:
