--- a/.github/workflows/sbi-csv-police.yml
+++ b/.github/workflows/sbi-csv-police.yml
@@ -37,7 +37,7 @@ jobs:
           add: 'src/data/fx_transactions/*'
           remove: './downloads/sbi/*.csv'
           message: Update src/data/fx_transactions ${{ steps.datetime.outputs.value }}
-          default_author: Eigo-Mt-Fuji
+          default_author: github_actor
           author_name: Eigo-Mt-Fuji
           author_email: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           commit: --signoff
