--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@mui/material": "^5.6.0",
     "@mui/styles": "^5.6.0",
     "@next/mdx": "12.1.4",
+    "@openzeppelin/contracts": "^4.6.0",
+    "@truffle/hdwallet-provider": "^2.0.8",
     "@turf/bbox": "^6.0.1",
     "bootstrap": "^4.6.0",
+    "dotenv": "^16.0.1",
     "electron": "11.2.3",
     "fakerest": "^3.0.0",
     "fetch-mock": "~6.3.0",
@@ -67,7 +70,9 @@
     "react-router-dom": "^5.1.0",
     "react-virtualized": "^9.22.3",
     "recharts": "^2.0.4",
-    "redux-saga": "^1.0.0"
+    "redux-saga": "^1.0.0",
+    "tailwindcss": "^3.0.24",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.2.5",
